--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # Site wide configuration
 
-title: Site Title
+title: Bo Pang's homepage
 locale: en_US
 logo: # filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
-  name: Your Name
+  name: Bo Pang
   avatar: bio-photo.jpg
   bio: "A brief description of yourself."
-  email: #emailaddress
+  email: bo.pang at nyu dot edu
   # Do not include the @ symbol in your Twitter username
   twitter: #username
   linkedin: #username
