upload my photo

--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ logo: # filename of a logo image that has been placed into your images directory
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
   name: Bo Pang
-  avatar: bio-photo.jpg
+  avatar: Bo_Pang_UG.jpg
   bio: "A brief description of yourself."
-  email: bo.pang at nyu dot edu
+  email: #
   # Do not include the @ symbol in your Twitter username
   twitter: #username
   linkedin: #username
