--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ owner:
     plus: #username
     analytics:
     verify:
-    scholar: #id
+    scholar: bp1471@nyu.edu #id
   facebook: #username
   instagram: #username
   bing-verify:
